# snake

./: .gitignore  CMakeLists.txt  README.md  windows-toolchain.cmake
include/: food.h  game.h  snake.h
src/: food.c  game.c  main.c  snake.c
